force-app/main/default/objects/State__c/State__c.object-meta.xml
<CustomObject>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>