force-app/main/default/objects/State__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>