force-app/main/default/objects/State__c/listViews/Active_States.listView-meta.xml
<ListView>
    <fullName>Active_States</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>External_Key__c</columns>
    <columns>State_Code__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active States</label>
</ListView>